# data-collection-workspace

./: data01_데이터수집_hollys.ipynb  data01_데이터수집_정적데이터_기본.ipynb  data02_데이터수집_hollys.ipynb  data03_데이터수집_동적데이터.ipynb  data04_데이터수집_API_자전거_사고_다발지역.ipynb  hollys_store.csv  hollys_store_page.csv  home.html  inner.html  main.py  news.xlsx  pyproject.toml
