[project]
name = "data-collection-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ipykernel>=7.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.5",
    "pytz>=2026.2",
    "requests>=2.34.2",
    "selenium>=4.46.0",
    "webdriver-manager>=4.1.2",
]
